--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game</title>
 </head>
-<body>
+<body style="margin: 0px; overflow: hidden;">
     <canvas id="2dcanvas" class="2dcanvas"></canvas>
     <script src="script.js"></script>
 </body>
